# DBMigrationHelper

./: CMakeLists.txt  README.md
src/: BusinessLogic.cpp  BusinessLogic.h  Dashboard.cpp  Dashboard.h  main.cpp
src/qml/: CMPath.qml  ConsoleControl.qml  CurrentVersion.qml  Dashboard.qml  NewVersion.qml  main.qml  qml.qrc
src/qml/Theme/: Theme.qml
